Fix letter spacing and font size issue on headers

--- a/src/reset.less
+++ b/src/reset.less
@@ -46,12 +46,12 @@ h3 {
 
 h1 {
   font-size: 2.5rem;
-  letter-spacing: 1.2rem;
+  letter-spacing: 1.1rem;
   color: @title;
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   letter-spacing: 0.6rem;
   font-weight: 700;
   color: @header;
