--- a/src/responsive.less
+++ b/src/responsive.less
@@ -6,8 +6,8 @@
     padding: 1.8rem 0.8rem 1.6rem;
 
     &.travel-accommodation-bg h1.smaller {
-      font-size: 2.4rem;
-      letter-spacing: 0.8rem;
+      font-size: 2.3rem;
+      letter-spacing: 0.75rem;
     }
   }
 }
