--- a/src/style.less
+++ b/src/style.less
@@ -25,9 +25,9 @@ header {
     background-image: url('./images/travel-accommodation-bg.jpg');
 
     h1.smaller {
-      font-size: 1.55rem;
-      letter-spacing: 0.9rem;
-      padding-left: 0.6rem;
+      font-size: 1.8rem;
+      letter-spacing: 0.7rem;
+      padding-left: 0.5rem;
     }
   }
 
